AnalyseurDTD/dtd.output
Terminaux qui ne sont utilisés

   ELEMENT
   VIRGULE
   EMPTY
   ANY
   PCDATA
   AST
   PTINT
   PLUS


Grammaire

    0 $accept: main $end

    1 main: dtd_list_opt

    2 dtd_list_opt: dtd_list_opt ATTLIST NOM att_definition_opt SUP
    3             | /* vide */

    4 att_definition_opt: att_definition_opt attribut
    5                   | /* vide */

    6 attribut: NOM att_type defaut_declaration

    7 att_type: CDATA
    8         | TOKENTYPE
    9         | type_enumere

   10 type_enumere: OUVREPAR liste_enum_plus FERMEPAR

   11 liste_enum_plus: liste_enum BARRE NOM

   12 liste_enum: NOM
   13           | liste_enum BARRE NOM

   14 defaut_declaration: DECLARATION
   15                   | VALEUR
   16                   | FIXED VALEUR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
ELEMENT (258)
ATTLIST (259) 2
SUP (260) 2
OUVREPAR (261) 10
FERMEPAR (262) 10
VIRGULE (263)
BARRE (264) 11 13
FIXED (265) 16
EMPTY (266)
ANY (267)
PCDATA (268)
AST (269)
PTINT (270)
PLUS (271)
CDATA (272) 7
NOM (273) 2 6 11 12 13
TOKENTYPE (274) 8
DECLARATION (275) 14
VALEUR (276) 15 16


Non-terminaux, suivis des règles où ils apparaissent

$accept (22)
    à gauche: 0
main (23)
    à gauche: 1, à droite: 0
dtd_list_opt (24)
    à gauche: 2 3, à droite: 1 2
att_definition_opt (25)
    à gauche: 4 5, à droite: 2 4
attribut (26)
    à gauche: 6, à droite: 4
att_type (27)
    à gauche: 7 8 9, à droite: 6
type_enumere (28)
    à gauche: 10, à droite: 9
liste_enum_plus (29)
    à gauche: 11, à droite: 10
liste_enum (30)
    à gauche: 12 13, à droite: 11 13
defaut_declaration (31)
    à gauche: 14 15 16, à droite: 6


état 0

    0 $accept: . main $end

    $défaut  réduction par utilisation de la règle 3 (dtd_list_opt)

    main          aller à l'état 1
    dtd_list_opt  aller à l'état 2


état 1

    0 $accept: main . $end

    $end  décalage et aller à l'état 3


état 2

    1 main: dtd_list_opt .
    2 dtd_list_opt: dtd_list_opt . ATTLIST NOM att_definition_opt SUP

    ATTLIST  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 1 (main)


état 3

    0 $accept: main $end .

    $défaut  accepter


état 4

    2 dtd_list_opt: dtd_list_opt ATTLIST . NOM att_definition_opt SUP

    NOM  décalage et aller à l'état 5


état 5

    2 dtd_list_opt: dtd_list_opt ATTLIST NOM . att_definition_opt SUP

    $défaut  réduction par utilisation de la règle 5 (att_definition_opt)

    att_definition_opt  aller à l'état 6


état 6

    2 dtd_list_opt: dtd_list_opt ATTLIST NOM att_definition_opt . SUP
    4 att_definition_opt: att_definition_opt . attribut

    SUP  décalage et aller à l'état 7
    NOM  décalage et aller à l'état 8

    attribut  aller à l'état 9


état 7

    2 dtd_list_opt: dtd_list_opt ATTLIST NOM att_definition_opt SUP .

    $défaut  réduction par utilisation de la règle 2 (dtd_list_opt)


état 8

    6 attribut: NOM . att_type defaut_declaration

    OUVREPAR   décalage et aller à l'état 10
    CDATA      décalage et aller à l'état 11
    TOKENTYPE  décalage et aller à l'état 12

    att_type      aller à l'état 13
    type_enumere  aller à l'état 14


état 9

    4 att_definition_opt: att_definition_opt attribut .

    $défaut  réduction par utilisation de la règle 4 (att_definition_opt)


état 10

   10 type_enumere: OUVREPAR . liste_enum_plus FERMEPAR

    NOM  décalage et aller à l'état 15

    liste_enum_plus  aller à l'état 16
    liste_enum       aller à l'état 17


état 11

    7 att_type: CDATA .

    $défaut  réduction par utilisation de la règle 7 (att_type)


état 12

    8 att_type: TOKENTYPE .

    $défaut  réduction par utilisation de la règle 8 (att_type)


état 13

    6 attribut: NOM att_type . defaut_declaration

    FIXED        décalage et aller à l'état 18
    DECLARATION  décalage et aller à l'état 19
    VALEUR       décalage et aller à l'état 20

    defaut_declaration  aller à l'état 21


état 14

    9 att_type: type_enumere .

    $défaut  réduction par utilisation de la règle 9 (att_type)


état 15

   12 liste_enum: NOM .

    $défaut  réduction par utilisation de la règle 12 (liste_enum)


état 16

   10 type_enumere: OUVREPAR liste_enum_plus . FERMEPAR

    FERMEPAR  décalage et aller à l'état 22


état 17

   11 liste_enum_plus: liste_enum . BARRE NOM
   13 liste_enum: liste_enum . BARRE NOM

    BARRE  décalage et aller à l'état 23


état 18

   16 defaut_declaration: FIXED . VALEUR

    VALEUR  décalage et aller à l'état 24


état 19

   14 defaut_declaration: DECLARATION .

    $défaut  réduction par utilisation de la règle 14 (defaut_declaration)


état 20

   15 defaut_declaration: VALEUR .

    $défaut  réduction par utilisation de la règle 15 (defaut_declaration)


état 21

    6 attribut: NOM att_type defaut_declaration .

    $défaut  réduction par utilisation de la règle 6 (attribut)


état 22

   10 type_enumere: OUVREPAR liste_enum_plus FERMEPAR .

    $défaut  réduction par utilisation de la règle 10 (type_enumere)


état 23

   11 liste_enum_plus: liste_enum BARRE . NOM
   13 liste_enum: liste_enum BARRE . NOM

    NOM  décalage et aller à l'état 25


état 24

   16 defaut_declaration: FIXED VALEUR .

    $défaut  réduction par utilisation de la règle 16 (defaut_declaration)


état 25

   11 liste_enum_plus: liste_enum BARRE NOM .
   13 liste_enum: liste_enum BARRE NOM .

    BARRE     réduction par utilisation de la règle 13 (liste_enum)
    $défaut  réduction par utilisation de la règle 11 (liste_enum_plus)
